# ThunderLib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ThunderLib-Version.txt  ThunderLib.json  ThunderLib2026.json  build.gradle  config.gradle  publish.gradle
.github/workflows/: build-thunderlib-api-docs.yaml  build-thunderlib-release.yaml
examples/ThunderAuto/cpp/: README.md  simgui-ds.json
examples/ThunderAuto/cpp/.wpilib/: wpilib_preferences.json
examples/ThunderAuto/cpp/src/main/cpp/: RobotContainer.cpp  SwerveModule.cpp
examples/ThunderAuto/cpp/src/main/cpp/commands/: ExampleCommand.cpp
examples/ThunderAuto/cpp/src/main/cpp/subsystems/: DriveSubsystem.cpp
examples/ThunderAuto/cpp/src/main/deploy/: ChargedUp.thunderauto
examples/ThunderAuto/cpp/src/main/include/: Constants.h  RobotContainer.h  SwerveModule.h
examples/ThunderAuto/cpp/src/main/include/commands/: ExampleCommand.h
examples/ThunderAuto/cpp/src/main/include/subsystems/: DriveSubsystem.h
examples/ThunderAuto/cpp/vendordeps/: ThunderLib2026.json
examples/ThunderAuto/java/: README.md
examples/ThunderAuto/java/.wpilib/: wpilib_preferences.json
examples/ThunderAuto/java/src/main/deploy/: ChargedUp.thunderauto  RapidReact.thunderauto
examples/ThunderAuto/java/src/main/java/frc/robot/: Constants.java  RobotContainer.java  SwerveModule.java
examples/ThunderAuto/java/src/main/java/frc/robot/commands/: ExampleCommand.java
examples/ThunderAuto/java/src/main/java/frc/robot/subsystems/: DriveSubsystem.java
examples/ThunderAuto/java/vendordeps/: ThunderLib2026.json
src/main/core/cpp/ThunderLibCore/: Logger.cpp  ThunderLibJNI.cpp  Types.cpp
src/main/core/cpp/ThunderLibCore/Auto/: ThunderAutoEditorState.cpp  ThunderAutoFieldImage.cpp  ThunderAutoMode.cpp  ThunderAutoOutputTrajectory.cpp  ThunderAutoProject.cpp  ThunderAutoTrajectorySkeleton.cpp
src/main/core/include/ThunderLibCore/: Concepts.hpp  Error.hpp  Logger.hpp  Macros.hpp  Math.hpp  RecentItemList.hpp  Types.hpp
src/main/core/include/ThunderLibCore/Auto/: ThunderAutoEditorState.hpp  ThunderAutoFieldImage.hpp  ThunderAutoMode.hpp  ThunderAutoOutputTrajectory.hpp  ThunderAutoProject.hpp  ThunderAutoTrajectorySkeleton.hpp
src/main/driver/cpp/ThunderLibDriver/: Error.hpp  Logger.cpp  Logger.hpp  ThunderLibJNI.cpp
src/main/driver/cpp/ThunderLibDriver/Auto/: ThunderAutoMode.cpp  ThunderAutoProject.cpp  ThunderAutoSendableChooser.cpp  ThunderAutoTrajectory.cpp
src/main/driver/cpp/ThunderLibDriver/JNI/: JavaTypes.cpp  JavaTypes.hpp  ThunderLibJNI.cpp  ThunderLibJNI.hpp  ThunderLibJNI_ThunderAutoMode.cpp  ThunderLibJNI_ThunderAutoModeStep.cpp  ThunderLibJNI_ThunderAutoProject.cpp  ThunderLibJNI_ThunderAutoSendableChooser.cpp  ThunderLibJNI_ThunderAutoTrajectory.cpp  ThunderLibTypes.cpp  ThunderLibTypes.hpp  WPILibTypes.cpp  WPILibTypes.hpp
src/main/driver/include/ThunderLibDriver/: Logger.hpp
src/main/driver/include/ThunderLibDriver/Auto/: ThunderAutoMode.hpp  ThunderAutoProject.hpp  ThunderAutoSendableChooser.hpp  ThunderAutoTrajectory.hpp
src/main/java/com/thunder/lib/: Example.java
src/main/java/com/thunder/lib/auto/: ThunderAutoMode.java  ThunderAutoModeStep.java  ThunderAutoProject.java  ThunderAutoSendableChooser.java  ThunderAutoTrajectory.java
src/main/java/com/thunder/lib/commands/: ThunderAutoModeCommand.java  ThunderAutoTrajectoryCommand.java
src/main/java/com/thunder/lib/jni/: ThunderLibJNI.java
src/main/java/com/thunder/lib/trajectory/: FieldDimensions.java  FieldSymmetry.java  ThunderTrajectory.java  ThunderTrajectoryRunnerProperties.java  ThunderTrajectoryState.java
src/main/java/com/thunder/lib/types/: CanonicalAngle.java
src/main/native/cpp/: Error.hpp  Example.cpp  Logger.cpp  hi.cpp
src/main/native/cpp/Auto/: ThunderAutoMode.cpp  ThunderAutoProject.cpp  ThunderAutoSendableChooser.cpp  ThunderAutoTrajectory.cpp
src/main/native/cpp/Commands/: ThunderAutoModeCommand.cpp  ThunderAutoTrajectoryCommand.cpp
src/main/native/include/ThunderLib/: Example.hpp
src/main/native/include/ThunderLib/Auto/: ThunderAutoMode.hpp  ThunderAutoProject.hpp  ThunderAutoSendableChooser.hpp  ThunderAutoTrajectory.hpp
src/main/native/include/ThunderLib/Commands/: ThunderAutoModeCommand.hpp  ThunderAutoTrajectoryCommand.hpp
src/main/native/include/ThunderLib/Trajectory/: Trajectory.hpp  TrajectoryRunnerProperties.hpp
src/main/native/include/ThunderLib/Types/: CanonicalAngle.hpp
src/test/core/cpp/: main.cpp
src/test/core/cpp/Auto/: BuildOutputTrajectoryTests.cpp  LoadProjectTests.cpp  ProjectTests.cpp  ThunderAutoBuildOutputTrajectoryTests.cpp  ThunderAutoModeTests.cpp  ThunderAutoProjectTests.cpp
src/test/core/cpp/Types/: CanonicalAngleTests.cpp  RecentItemListTests.cpp  RectTests.cpp  VecTests.cpp
src/test/core/include/ThunderLibCoreTests/: ThunderLibCoreTests.hpp
src/test/core/testdata/ThunderAuto/: Pre2026.thunderauto  SimpleTrajectory.thunderauto
src/test/driver/cpp/: main.cpp
src/test/driver/cpp/Auto/: ThunderAutoProjectTests.cpp
src/test/driver/include/ThunderLibDriverTests/: ThunderLibDriverTests.hpp
src/test/java/com/thunder/lib/: TestExample.java
src/test/java/com/thunder/lib/tests/: BaseTestSuite.java  CanonicalAngleTestSuite.java
src/test/java/com/thunder/lib/tests/auto/: ThunderAutoProjectTestSuite.java
src/test/java/com/thunder/lib/tests/types/: CanonicalAngleTestSuite.java
src/test/native/cpp/: TestExample.cpp  main.cpp
src/test/native/cpp/Auto/: ThunderAutoProjectTests.cpp
src/test/native/cpp/Types/: TestCanonicalAngle.cpp
src/test/native/include/ThunderLibTests/: ThunderLibTests.hpp
src/test/resources/ThunderAuto/: SimpleTrajectory.thunderauto
vendordeps/: WPILibNewCommands.json
